--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
@@ -23,7 +23,10 @@
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
+    "@jonny/react-native-mock": "^0.4.2",
     "babel-jest": "~25.2.6",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.5",
     "jest": "~25.2.6",
     "react-test-renderer": "~16.13.1"
   },
