--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+  "name": "rn-starter-kit",
+  "version": "0.0.1",
   "main": "src/index.js",
   "scripts": {
     "android": "react-native run-android",
@@ -25,13 +27,12 @@
     "@babel/core": "~7.9.0",
     "@jonny/react-native-mock": "^0.4.2",
     "babel-jest": "~25.2.6",
+    "detox": "^18.0.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
-    "jest": "~25.2.6",
+    "jest": "^26.6.3",
+    "jest-circus": "^26.6.3",
     "react-test-renderer": "~16.13.1"
-  },
-  "jest": {
-    "preset": "react-native"
   },
   "private": true
 }
