--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "web": "expo start --web",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint *.js e2e/*.js __tests__/**/*.js",
+    "lint": "eslint *.js src/**/*.js e2e/*.js __tests__/**/*.js",
     "detox:test": "detox test -r"
   },
   "dependencies": {
