--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rn-starter-kit",
   "version": "0.0.1",
-  "main": "src/index.js",
+  "main": "index.js",
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
@@ -16,6 +16,7 @@
     "expo-splash-screen": "~0.8.0",
     "expo-status-bar": "~1.0.3",
     "expo-updates": "~0.4.0",
+    "immutable": "^4.0.0-rc.12",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
