--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,7 +6,7 @@ buildscript {
         minSdkVersion = 21
         compileSdkVersion = 29
         targetSdkVersion = 29
-        // kotlinVersion = "1.4.21"
+        kotlinVersion = "1.4.21"
     }
     repositories {
         google()
